--- a/src/app/table-test/table-test.component.html
+++ b/src/app/table-test/table-test.component.html
@@ -1,25 +1,25 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <!--  position column-->
-  <ng-container matColumnDef="position">
+  <ng-container matColumnDef="No">
     <th mat-header-cell *matHeaderCellDef> No.</th>
     <td mat-cell *matCellDef="let element">{{element.position}}</td>
   </ng-container>
 
   <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name</th>
+  <ng-container matColumnDef="Nombre">
+    <th mat-header-cell *matHeaderCellDef> 元素名</th>
     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Weight</th>
+  <ng-container matColumnDef="Peso">
+    <th mat-header-cell *matHeaderCellDef> 重さ</th>
     <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef> Symbol</th>
+  <ng-container matColumnDef="Símbolo">
+    <th mat-header-cell *matHeaderCellDef> 記号</th>
     <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
   </ng-container>
 
