--- a/src/app/table-test/table-test.component.html
+++ b/src/app/table-test/table-test.component.html
@@ -1,26 +1,28 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <!--  position column-->
-  <ng-container matColumnDef="No">
-    <th mat-header-cell *matHeaderCellDef> No.</th>
-    <td mat-cell *matCellDef="let element">{{element.position}}</td>
+
+  <ng-container matColumnDef="Image">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element"><img [src]="element.picture" /></td>
   </ng-container>
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="Nombre">
-    <th mat-header-cell *matHeaderCellDef> 元素名</th>
+  <ng-container matColumnDef="Name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
   </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="Peso">
-    <th mat-header-cell *matHeaderCellDef> 重さ</th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+  <ng-container matColumnDef="Country">
+    <th mat-header-cell *matHeaderCellDef> Country</th>
+    <td mat-cell *matCellDef="let element"> {{element.country}} </td>
   </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="Símbolo">
-    <th mat-header-cell *matHeaderCellDef> 記号</th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+  <ng-container matColumnDef="Age">
+    <th mat-header-cell *matHeaderCellDef> Age</th>
+    <td mat-cell *matCellDef="let element"> {{element.age}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Email">
+    <th mat-header-cell *matHeaderCellDef> Email</th>
+    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
   </ng-container>
 
 <!--  header の表示-->
